# senv

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.env  senv.cabal  senv.pest
app/: Main.hs
src/: Fancy.hs  MyLib.hs  Senv.hs  ffi.rs  lib.rs  main.rs  parse.rs
src/cmd/: main.rs
test/: LibTest.hs  Test.hs
