[package]
name = "senv"
description = "Agnostic .env"
documentation = "https://github.com/krashanoff/senv#readme"
readme = "https://github.com/krashanoff/senv#readme"
homepage = "https://github.com/krashanoff/senv"
repository = "https://github.com/krashanoff/senv"
license = "MIT"
license-file = "LICENSE"
categories = ["command-line-utilities"]
authors = ["Leonid Krashanoff <leo@krashanoff.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "derive"] }
either = "1"
pest = "2"
pest_derive = "2"
