cabal-version:      2.4
name:               senv
version:            0.1.0.0

synopsis: Parse and convert .env files.
description: See the README on GitHub (<https://github.com/krashanoff/senv#README>)
bug-reports: https://github.com/krashanoff/senv/issues

author:             Leonid Krashanoff
maintainer:         leo@krashanoff.com
license:            MIT
license-file:       LICENSE

category: Command Line Tools
extra-source-files:
    CHANGELOG.md
    LICENSE

library
    exposed-modules:
        Senv

    other-modules:

    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.15.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable senv
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        senv

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-lib
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs:
        test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        senv
        , base ^>=4.16.4.0
        , tasty
        , tasty-hunit
    default-language: Haskell2010
